[tool.poetry]
name = "locust-stress-test"
version = "0.1.0"
description = ""
authors = ["Fernando Crozetta <Fernando.Crozetta@rabobank.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
locust = "^2.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
